// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AJV latest should output error with codeframe 1`] = `
"<red><bold>ENUM</></><red> must be equal to one of the allowed values</>
<red>(paragraph, codeBlock, blockquote)</>

</> <gray> 2 |</>   <green>\\"type\\"</><yellow>:</> <green>\\"doc\\"</><yellow>,</></>
</> <gray> 3 |</>   <green>\\"version\\"</><yellow>:</> 1</><yellow>,</></>
</><red><bold>></></><gray> 4 |</>   <green>\\"content\\"</><yellow>:</> [{ <green>\\"type\\"</><yellow>:</> <green>\\"paragarph\\"</> }]</>
</> <gray>   |</>                         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean paragraph<red> here?</></></>
</> <gray> 5 |</> }</>
</> <gray> 6 |</></>"
`;

exports[`AJV latest should output error with reconstructed codeframe 1`] = `
"<red><bold>ENUM</></><red> must be equal to one of the allowed values</>
<red>(paragraph, codeBlock, blockquote)</>

</> <gray> 4 |</>   <green>\\"content\\"</><yellow>:</> [</>
</> <gray> 5 |</>     {</>
</><red><bold>></></><gray> 6 |</>       <green>\\"type\\"</><yellow>:</> <green>\\"paragarph\\"</></>
</> <gray>   |</>               <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean paragraph<red> here?</></></>
</> <gray> 7 |</>     }</>
</> <gray> 8 |</>   ]</>
</> <gray> 9 |</> }</>"
`;

exports[`AJV latest should output proper error for enumeration 1`] = `
"<red><bold>ENUM</></><red> must be equal to one of the allowed values</>
<red>(foo, bar)</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean bar<red> here?</></></>
</> <gray> 3 |</> }</>"
`;

exports[`AJV latest should output proper error for enumeration in anyOf 1`] = `
"<red><bold>ENUM</></><red> must be equal to one of the allowed values</>
<red>(foo, bar)</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean bar<red> here?</></></>
</> <gray> 3 |</> }</>

<red><bold>TYPE</></><red> must be array</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  type<red> must be array</></></>
</> <gray> 3 |</> }</>

<red><bold>ANYOF</></><red> must match a schema in anyOf</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  anyOf<red> must match a schema in anyOf</></></>
</> <gray> 3 |</> }</>"
`;

exports[`AJV v4 should output error with codeframe 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(paragraph, codeBlock, blockquote)</>

</> <gray> 2 |</>   <green>\\"type\\"</><yellow>:</> <green>\\"doc\\"</><yellow>,</></>
</> <gray> 3 |</>   <green>\\"version\\"</><yellow>:</> 1</><yellow>,</></>
</><red><bold>></></><gray> 4 |</>   <green>\\"content\\"</><yellow>:</> [{ <green>\\"type\\"</><yellow>:</> <green>\\"paragarph\\"</> }]</>
</> <gray>   |</>                         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean paragraph<red> here?</></></>
</> <gray> 5 |</> }</>
</> <gray> 6 |</></>"
`;

exports[`AJV v4 should output error with reconstructed codeframe 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(paragraph, codeBlock, blockquote)</>

</> <gray> 4 |</>   <green>\\"content\\"</><yellow>:</> [</>
</> <gray> 5 |</>     {</>
</><red><bold>></></><gray> 6 |</>       <green>\\"type\\"</><yellow>:</> <green>\\"paragarph\\"</></>
</> <gray>   |</>               <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean paragraph<red> here?</></></>
</> <gray> 7 |</>     }</>
</> <gray> 8 |</>   ]</>
</> <gray> 9 |</> }</>"
`;

exports[`AJV v4 should output proper error for enumeration 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(foo, bar)</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean bar<red> here?</></></>
</> <gray> 3 |</> }</>"
`;

exports[`AJV v4 should output proper error for enumeration in anyOf 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(foo, bar)</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean bar<red> here?</></></>
</> <gray> 3 |</> }</>

<red><bold>TYPE</></><red> should be array</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  type<red> should be array</></></>
</> <gray> 3 |</> }</>

<red><bold>ANYOF</></><red> should match some schema in anyOf</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  anyOf<red> should match some schema in anyOf</></></>
</> <gray> 3 |</> }</>"
`;

exports[`AJV v5 should output error with codeframe 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(paragraph, codeBlock, blockquote)</>

</> <gray> 2 |</>   <green>\\"type\\"</><yellow>:</> <green>\\"doc\\"</><yellow>,</></>
</> <gray> 3 |</>   <green>\\"version\\"</><yellow>:</> 1</><yellow>,</></>
</><red><bold>></></><gray> 4 |</>   <green>\\"content\\"</><yellow>:</> [{ <green>\\"type\\"</><yellow>:</> <green>\\"paragarph\\"</> }]</>
</> <gray>   |</>                         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean paragraph<red> here?</></></>
</> <gray> 5 |</> }</>
</> <gray> 6 |</></>"
`;

exports[`AJV v5 should output error with reconstructed codeframe 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(paragraph, codeBlock, blockquote)</>

</> <gray> 4 |</>   <green>\\"content\\"</><yellow>:</> [</>
</> <gray> 5 |</>     {</>
</><red><bold>></></><gray> 6 |</>       <green>\\"type\\"</><yellow>:</> <green>\\"paragarph\\"</></>
</> <gray>   |</>               <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean paragraph<red> here?</></></>
</> <gray> 7 |</>     }</>
</> <gray> 8 |</>   ]</>
</> <gray> 9 |</> }</>"
`;

exports[`AJV v5 should output proper error for enumeration 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(foo, bar)</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean bar<red> here?</></></>
</> <gray> 3 |</> }</>"
`;

exports[`AJV v5 should output proper error for enumeration in anyOf 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(foo, bar)</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean bar<red> here?</></></>
</> <gray> 3 |</> }</>

<red><bold>TYPE</></><red> should be array</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  type<red> should be array</></></>
</> <gray> 3 |</> }</>

<red><bold>ANYOF</></><red> should match some schema in anyOf</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  anyOf<red> should match some schema in anyOf</></></>
</> <gray> 3 |</> }</>"
`;

exports[`AJV v6 should output error with codeframe 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(paragraph, codeBlock, blockquote)</>

</> <gray> 2 |</>   <green>\\"type\\"</><yellow>:</> <green>\\"doc\\"</><yellow>,</></>
</> <gray> 3 |</>   <green>\\"version\\"</><yellow>:</> 1</><yellow>,</></>
</><red><bold>></></><gray> 4 |</>   <green>\\"content\\"</><yellow>:</> [{ <green>\\"type\\"</><yellow>:</> <green>\\"paragarph\\"</> }]</>
</> <gray>   |</>                         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean paragraph<red> here?</></></>
</> <gray> 5 |</> }</>
</> <gray> 6 |</></>"
`;

exports[`AJV v6 should output error with reconstructed codeframe 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(paragraph, codeBlock, blockquote)</>

</> <gray> 4 |</>   <green>\\"content\\"</><yellow>:</> [</>
</> <gray> 5 |</>     {</>
</><red><bold>></></><gray> 6 |</>       <green>\\"type\\"</><yellow>:</> <green>\\"paragarph\\"</></>
</> <gray>   |</>               <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean paragraph<red> here?</></></>
</> <gray> 7 |</>     }</>
</> <gray> 8 |</>   ]</>
</> <gray> 9 |</> }</>"
`;

exports[`AJV v6 should output proper error for enumeration 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(foo, bar)</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean bar<red> here?</></></>
</> <gray> 3 |</> }</>"
`;

exports[`AJV v6 should output proper error for enumeration in anyOf 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(foo, bar)</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean bar<red> here?</></></>
</> <gray> 3 |</> }</>

<red><bold>TYPE</></><red> should be array</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  type<red> should be array</></></>
</> <gray> 3 |</> }</>

<red><bold>ANYOF</></><red> should match some schema in anyOf</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  anyOf<red> should match some schema in anyOf</></></>
</> <gray> 3 |</> }</>"
`;

exports[`AJV v7 should output error with codeframe 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(paragraph, codeBlock, blockquote)</>

</> <gray> 2 |</>   <green>\\"type\\"</><yellow>:</> <green>\\"doc\\"</><yellow>,</></>
</> <gray> 3 |</>   <green>\\"version\\"</><yellow>:</> 1</><yellow>,</></>
</><red><bold>></></><gray> 4 |</>   <green>\\"content\\"</><yellow>:</> [{ <green>\\"type\\"</><yellow>:</> <green>\\"paragarph\\"</> }]</>
</> <gray>   |</>                         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean paragraph<red> here?</></></>
</> <gray> 5 |</> }</>
</> <gray> 6 |</></>"
`;

exports[`AJV v7 should output error with reconstructed codeframe 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(paragraph, codeBlock, blockquote)</>

</> <gray> 4 |</>   <green>\\"content\\"</><yellow>:</> [</>
</> <gray> 5 |</>     {</>
</><red><bold>></></><gray> 6 |</>       <green>\\"type\\"</><yellow>:</> <green>\\"paragarph\\"</></>
</> <gray>   |</>               <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean paragraph<red> here?</></></>
</> <gray> 7 |</>     }</>
</> <gray> 8 |</>   ]</>
</> <gray> 9 |</> }</>"
`;

exports[`AJV v7 should output proper error for enumeration 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(foo, bar)</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean bar<red> here?</></></>
</> <gray> 3 |</> }</>"
`;

exports[`AJV v7 should output proper error for enumeration in anyOf 1`] = `
"<red><bold>ENUM</></><red> should be equal to one of the allowed values</>
<red>(foo, bar)</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean bar<red> here?</></></>
</> <gray> 3 |</> }</>

<red><bold>TYPE</></><red> should be array</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  type<red> should be array</></></>
</> <gray> 3 |</> }</>

<red><bold>ANYOF</></><red> should match some schema in anyOf</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  anyOf<red> should match some schema in anyOf</></></>
</> <gray> 3 |</> }</>"
`;

exports[`AJV v8 should output error with codeframe 1`] = `
"<red><bold>ENUM</></><red> must be equal to one of the allowed values</>
<red>(paragraph, codeBlock, blockquote)</>

</> <gray> 2 |</>   <green>\\"type\\"</><yellow>:</> <green>\\"doc\\"</><yellow>,</></>
</> <gray> 3 |</>   <green>\\"version\\"</><yellow>:</> 1</><yellow>,</></>
</><red><bold>></></><gray> 4 |</>   <green>\\"content\\"</><yellow>:</> [{ <green>\\"type\\"</><yellow>:</> <green>\\"paragarph\\"</> }]</>
</> <gray>   |</>                         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean paragraph<red> here?</></></>
</> <gray> 5 |</> }</>
</> <gray> 6 |</></>"
`;

exports[`AJV v8 should output error with reconstructed codeframe 1`] = `
"<red><bold>ENUM</></><red> must be equal to one of the allowed values</>
<red>(paragraph, codeBlock, blockquote)</>

</> <gray> 4 |</>   <green>\\"content\\"</><yellow>:</> [</>
</> <gray> 5 |</>     {</>
</><red><bold>></></><gray> 6 |</>       <green>\\"type\\"</><yellow>:</> <green>\\"paragarph\\"</></>
</> <gray>   |</>               <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean paragraph<red> here?</></></>
</> <gray> 7 |</>     }</>
</> <gray> 8 |</>   ]</>
</> <gray> 9 |</> }</>"
`;

exports[`AJV v8 should output proper error for enumeration 1`] = `
"<red><bold>ENUM</></><red> must be equal to one of the allowed values</>
<red>(foo, bar)</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean bar<red> here?</></></>
</> <gray> 3 |</> }</>"
`;

exports[`AJV v8 should output proper error for enumeration in anyOf 1`] = `
"<red><bold>ENUM</></><red> must be equal to one of the allowed values</>
<red>(foo, bar)</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  Did you mean bar<red> here?</></></>
</> <gray> 3 |</> }</>

<red><bold>TYPE</></><red> must be array</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  type<red> must be array</></></>
</> <gray> 3 |</> }</>

<red><bold>ANYOF</></><red> must match a schema in anyOf</>

</> <gray> 1 |</> {</>
</><red><bold>></></><gray> 2 |</>   <green>\\"id\\"</><yellow>:</> <green>\\"baz\\"</></>
</> <gray>   |</>         <red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></><red><bold>^</></> <red><bold>👈🏽  anyOf<red> must match a schema in anyOf</></></>
</> <gray> 3 |</> }</>"
`;
